[package]
name = "snakit"
version = "0.1.0"
edition = "2021"
authors = ["Taha Hachana <tahahachana@gmail.com>"]

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
anyhow = "1.0.95"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
assert_fs = "1.1.2"
